--- a/SpringBoot-Angular-Front/src/app/employee-list/employee-list.component.html
+++ b/SpringBoot-Angular-Front/src/app/employee-list/employee-list.component.html
@@ -1,6 +1,6 @@
 <h2> Employee List </h2>
 <hr>
-<table class ="table table-striped table-dark table-hover">
+<table class ="table table-striped table-hover">
     <thead>
         <tr>
             <td> First Name </td>
