--- a/SpringBoot-Angular-Front/src/app/employee-list/employee-list.component.html
+++ b/SpringBoot-Angular-Front/src/app/employee-list/employee-list.component.html
@@ -6,6 +6,7 @@
             <td> First Name </td>
             <td> Last Name </td>
             <td> Email Id </td>
+            <td>Actions</td>
         </tr>
     </thead>
     <tbody>
@@ -13,6 +14,11 @@
             <td>{{employee.firstName}}</td>
             <td>{{employee.lastName}}</td>
             <td>{{employee.emailId}}</td>
+            <td>
+                <button class="btn btn-warning mx-2" (click) = "updateEmployee(employee.id)"> Update </button>
+                <button class = "btn btn-danger mx-2" (click) = "deleteEmployee(employee.id)"> Delete </button>
+                <button class = "btn btn-info mx-2" (click) = "viewEmployee(employee.id)"> View </button>
+            </td>
         </tr>
     </tbody>
 </table>
